RESOLVED FIXED197817
Overflow scroll that becomes non-scrollable should stop being composited
https://bugs.webkit.org/show_bug.cgi?id=197817
Summary Overflow scroll that becomes non-scrollable should stop being composited
Simon Fraser (smfr)
Reported 2019-05-11 11:50:54 PDT
Created attachment 369656 [details] Testcase Should not have compositing layers after the style change in this test.
Attachments
Testcase (1.30 KB, text/html)
2019-05-11 11:50 PDT, Simon Fraser (smfr)
no flags
Patch (6.45 KB, patch)
2019-05-11 15:05 PDT, Simon Fraser (smfr)
no flags
Radar WebKit Bug Importer
Comment 1 2019-05-11 15:04:26 PDT
Simon Fraser (smfr)
Comment 2 2019-05-11 15:05:55 PDT
WebKit Commit Bot
Comment 3 2019-05-11 16:17:23 PDT
Comment on attachment 369662 [details] Patch Clearing flags on attachment: 369662 Committed r245212: <https://trac.webkit.org/changeset/245212>
WebKit Commit Bot
Comment 4 2019-05-11 16:17:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.